# pdf-seekers

./: .gitignore  Cargo.toml  README.md  logging_config.yaml
.github/workflows/: integration_test.yaml  publish_crate.yaml  pypi_publish.yaml
pdf_index/: .managed.json  meta.json
pypdf_seekers/: Cargo.toml  README.md  pyproject.toml
pypdf_seekers/src/: error.rs  index_operations.rs  lib.rs  logging.rs  search_operations.rs
src/: error.rs  file_operations.rs  index_operations.rs  lib.rs  main.rs  search_operations.rs
tests/: file_operations_test.rs  index_operations_test.rs  integration_test.rs  unit_test.rs
