[package]
name = "pdf_seekers"
version = "0.1.0"
edition = "2021"
authors = ["Tapas Das <dlaststark@gmail.com>"]
description = "Powerful parser and information extractor from PDF documents with keyword search functionality (powered by Rust)"
readme = "README.md"
repository = "https://github.com/oss-rust-github-io/pdf-seekers.git"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
pdf-extract = "0.7.2"
tantivy = "0.21.1"